# Tec_Digital_PIO

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  (+3 more)
docs/: ARCHITECTURE.md
include/: arduino_compat.h  button_manager.h  esp_lcd_compat.h  ignicao_control.h  jornada_keyboard.h  jornada_manager.h  lv_conf.h  lvgl_fs_driver.h  numpad_example.h  simple_audio_manager.h  simple_splash.h  simple_ui.h
src/: CMakeLists.txt  button_manager.cpp  idf_component.yml  ignicao_control.cpp  jornada_keyboard.cpp  jornada_manager.cpp  lvgl_fs_driver.cpp  main.cpp  main_old.cpp.bak  numpad_example.cpp  simple_audio_manager.cpp  simple_splash.cpp  simple_ui.cpp
src/core/: app_init.cpp
src/services/ble/: ble_event_queue.cpp  ble_service.cpp
src/services/ble/gatt/: gatt_config.cpp  gatt_diagnostics.cpp  gatt_journey.cpp  gatt_ota_prov.cpp  gatt_server.cpp
src/services/ignicao/: ignicao_service.cpp
src/services/jornada/: jornada_service.cpp
src/services/nvs/: nvs_manager.cpp
src/services/ota/: ota_http_server.cpp  ota_self_test.cpp  ota_service.cpp  ota_wifi.cpp
src/ui/: screen_manager.cpp
src/ui/common/: theme.cpp
src/ui/screens/: jornada_screen.cpp  numpad_screen.cpp  ota_screen.cpp  settings_screen.cpp
src/ui/widgets/: status_bar.cpp
src/utils/: debug_utils.cpp  time_utils.cpp
(+78 files in other folders)
